--- a/day-02/index.html
+++ b/day-02/index.html
@@ -10,24 +10,26 @@
     <body>
         <header class="header">Container Queries</header>
 
-        <div class="card-container">
-            <div class="product-card">
-                <img
-                    src="https://via.placeholder.com/150"
-                    height="150"
-                    width="150"
-                    alt="Product Image"
-                    class="product-image"
-                />
-                <div class="product-details">
-                    <h2 class="product-title">Product Title</h2>
-                    <p class="product-description">
-                        This is a description of the product. It highlights key
-                        features and benefits.
-                    </p>
+        <main>
+            <div class="card-container">
+                <div class="product-card">
+                    <img
+                        src="https://via.placeholder.com/150"
+                        height="150"
+                        width="150"
+                        alt="Product Image"
+                        class="product-image"
+                    />
+                    <div class="product-details">
+                        <h2 class="product-title">Product Title</h2>
+                        <p class="product-description">
+                            This is a description of the product. It highlights
+                            key features and benefits.
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
         <script type="module" src="./main.js"></script>
     </body>
 </html>
