--- a/day-05/index.html
+++ b/day-05/index.html
@@ -9,21 +9,7 @@
     </head>
     <body>
         <header class="header">Popover API</header>
-        <main>
-            <section class="cards-wrapper">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-            </section>
-        </main>
+        <main></main>
         <script type="module" src="./main.js"></script>
     </body>
 </html>
