--- a/day-03/index.html
+++ b/day-03/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Day 3: CSS - :has() Pseudo-Class</title>
+        <title>Day 3: :has() Pseudo-Class</title>
         <link rel="stylesheet" href="../main.css" />
-        <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
         <header class="header">:has() Pseudo-Class</header>
