--- a/day-04/index.html
+++ b/day-04/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Day 4: CSS - Scroll-Driven Animations 2</title>
+        <title>Day 4: Scroll-Driven Animations 2</title>
         <link rel="stylesheet" href="../main.css" />
-        <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
         <header class="header">Scroll-Driven Animations 2</header>
