--- a/day-01/index.html
+++ b/day-01/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Day 1: CSS - Scroll Animation</title>
+        <title>Day 1: Scroll Animation</title>
         <link rel="stylesheet" href="../main.css" />
-        <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
         <header class="header">Scroll Down</header>
