--- a/day-02/index.html
+++ b/day-02/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Day 2: CSS - Container Queries</title>
+        <title>Day 2: Container Queries</title>
         <link rel="stylesheet" href="../main.css" />
-        <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
         <header class="header">Container Queries</header>
