--- a/day-05/index.html
+++ b/day-05/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="header">Popover API with Anchor Positioning</header>
-        <main>
+        <main class="container">
             <!-- <button popovertarget="mypopover" class="button">Click me</button>
             <div id="mypopover" popover class="popover">
                 <p>This is a custom popover</p>
