--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                     <summary>Day 01</summary>
                     <p>Scroll-Driven Animations</p>
                     <p>Task: Animate a Header’s Size While Scrolling.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_scroll-driven_animations"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
@@ -99,7 +103,11 @@
                     <summary>Day 02</summary>
                     <p>Container Queries</p>
                     <p>Task: Create a Responsive Product Card.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_containment/Container_queries"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
@@ -123,7 +131,11 @@
                     <summary>Day 03</summary>
                     <p>:has() Pseudo-Class</p>
                     <p>Task: Enable Submit Button Conditionally.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/:has"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
@@ -150,7 +162,11 @@
                         Task: Animate the Card’s Size And Background While
                         Scrolling.
                     </p>
-                    <a href="" target="_blank">Documentation</a>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/animation-timeline/view"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
@@ -176,7 +192,16 @@
                     <summary>Day 05</summary>
                     <p>Popover API with Anchor Positioning</p>
                     <p>Task: Implement a Custom Popover Component.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/API/Popover_API"
+                        target="_blank"
+                        >Documentation 1</a
+                    >
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/position-anchor"
+                        target="_blank"
+                        >Documentation 2</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
@@ -203,53 +228,65 @@
 
                 <details>
                     <summary>Day 06</summary>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <p>text-wrap: balance</p>
+                    <p>
+                        Task: Implement Balanced and Aesthetically Pleasing Text
+                        Wrapping.
+                    </p>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/text-wrap"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
+                            Use the text-wrap: balance property on the
+                            paragraphs to enable balanced text wrapping.
                         </li>
-                        <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
-                        </li>
-                        <li>Apply the animation using animation-timeline.</li>
                     </ol>
 
                     <a href="/day-06/" target="_blank">Go to the task page</a>
 
                     <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
+                        DX Improvement: Simplifies the creation of aesthetically
+                        pleasing text layouts, improving readability and user
+                        experience.
                     </p>
                 </details>
 
                 <details>
                     <summary>Day 07</summary>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <p>Task: Implement a Light-Dark Theme.</p>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/color_value/light-dark"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
+                            Set "color-scheme: light dark" to enable the
+                            light-dark() color function for the document.
                         </li>
                         <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
+                            Define CSS variables for primary colors (text color
+                            and background color) used for both light and dark
+                            themes using light-dark() function.
                         </li>
-                        <li>Apply the animation using animation-timeline.</li>
+                        <li>
+                            Highlight how the light-dark() function simplifies
+                            theme management compared to manually toggling
+                            classes or redefining variables.
+                        </li>
                     </ol>
 
                     <a href="/day-07/" target="_blank">Go to the task page</a>
 
                     <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
+                        DX Improvement: Simplifies theme management and enhances
+                        user experience by enabling dynamic color adjustments
+                        based on the selected theme.
                     </p>
                 </details>
 
