--- a/day-01/index.html
+++ b/day-01/index.html
@@ -73,5 +73,6 @@
                 <p>Lorem ipsum dolor sit amet...</p>
             </section>
         </main>
+        <script type="module" src="./main.js"></script>
     </body>
 </html>
