--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                     <ol>
                         <li>
                             Design a card layout that adjusts from vertical to
-                            horizontal at 500px container width (more than 500px
-                            - horizontal view).
+                            horizontal at 500px card's (container) width.
                         </li>
                         <li>Use @container to conditionally apply styles.</li>
                     </ol>
@@ -169,13 +168,10 @@
                     >
                     <p>Steps:</p>
                     <ol>
+                        <li>Use your knowledge from Day 01</li>
                         <li>
-                            Create a card that scales from 0.6 to 1 and changes
-                            its background color as it scrolls into view
-                        </li>
-                        <li>
-                            Use the view() function to define the animation
-                            based on the element’s visibility in the viewport.
+                            Use the view() function to scale cards from 0.5 to 1
+                            and change its background as it scrolls into view
                         </li>
                     </ol>
 
@@ -204,10 +200,6 @@
                     >
                     <p>Steps:</p>
                     <ol>
-                        <li>
-                            Create a custom popover component that displays
-                            content on a relative button click.
-                        </li>
                         <li>
                             Use the Popover API to manage the popover’s
                             visibility.
@@ -266,8 +258,9 @@
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Set "color-scheme: light dark" to enable the
-                            light-dark() color function for the document.
+                            Set "color-scheme: light dark" to the :root to
+                            enable the light-dark() color function for the
+                            document.
                         </li>
                         <li>
                             Define CSS variables for primary colors (text color
