--- a/index.html
+++ b/index.html
@@ -258,14 +258,9 @@
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Set "color-scheme: light dark" to the :root to
-                            enable the light-dark() color function for the
-                            document.
-                        </li>
-                        <li>
-                            Define CSS variables for primary colors (text color
-                            and background color) used for both light and dark
-                            themes using light-dark() function.
+                            Define and use CSS variables for text and background
+                            colors for both light and dark themes using
+                            light-dark() function.
                         </li>
                         <li>
                             Highlight how the light-dark() function simplifies
