--- a/day-06/index.html
+++ b/day-06/index.html
@@ -3,26 +3,66 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Day 6: text-wrap: balance</title>
+        <title>Day 6: text-wrap: balance and pretty</title>
         <link rel="stylesheet" href="../main.css" />
     </head>
     <body>
-        <header class="header">text-wrap: balance</header>
+        <header class="header">text-wrap: balance and pretty</header>
         <main class="container">
+            <h2>Balance</h2>
             <p class="balanced-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-                lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod
-                malesuada.
+                Oh, just a little weather experiment. What, what is it hot?
+                Yeah, sure, okay. Doc, I'm from the future. I came here in a
+                time machine that you invented. Now, I need your help to get
+                back to the year 1985. What, right here right now in the
+                cafeteria? What if she said no? I don't know if I could take
+                that kind of rejection. Besides, I think she'd rather go with
+                somebody else.
             </p>
             <p class="balanced-text">
-                Curabitur non nulla sit amet nisl tempus convallis quis ac
-                lectus. Nulla porttitor accumsan tincidunt. Proin eget tortor
-                risus.
+                No wait, Doc, the bruise, the bruise on your head, I know how
+                that happened, you told me the whole story. you were standing on
+                your toilet and you were hanging a clock, and you fell, and you
+                hit your head on the sink, and that's when you came up with the
+                idea for the flux capacitor, which makes time travel possible.
+                Yeah, alright, bye-bye. What? Now, of course not, Biff, now, I
+                wouldn't want that to happen. Doc, wait. No, bastards. Nothing.
             </p>
             <p class="balanced-text">
-                Donec sollicitudin molestie malesuada. Praesent sapien massa,
-                convallis a pellentesque nec, egestas non nisi. Donec rutrum
-                congue leo eget malesuada.
+                Anyway, Grandpa hit him with the car and brought him into the
+                house. He seemed so helpless, like a little lost puppy, my heart
+                just went out for him. Marty, one rejection isn't the end of the
+                world. Doc, I'm from the future. I came here in a time machine
+                that you invented. Now, I need your help to get back to the year
+                1985. Right. Maybe you were adopted.
+            </p>
+
+            <h2>Pretty</h2>
+            <p class="pretty-text">
+                Oh, just a little weather experiment. What, what is it hot?
+                Yeah, sure, okay. Doc, I'm from the future. I came here in a
+                time machine that you invented. Now, I need your help to get
+                back to the year 1985. What, right here right now in the
+                cafeteria? What if she said no? I don't know if I could take
+                that kind of rejection. Besides, I think she'd rather go with
+                somebody else.
+            </p>
+            <p class="pretty-text">
+                No wait, Doc, the bruise, the bruise on your head, I know how
+                that happened, you told me the whole story. you were standing on
+                your toilet and you were hanging a clock, and you fell, and you
+                hit your head on the sink, and that's when you came up with the
+                idea for the flux capacitor, which makes time travel possible.
+                Yeah, alright, bye-bye. What? Now, of course not, Biff, now, I
+                wouldn't want that to happen. Doc, wait. No, bastards. Nothing.
+            </p>
+            <p class="pretty-text">
+                Anyway, Grandpa hit him with the car and brought him into the
+                house. He seemed so helpless, like a little lost puppy, my heart
+                just went out for him. Marty, one rejection isn't the end of the
+                world. Doc, I'm from the future. I came here in a time machine
+                that you invented. Now, I need your help to get back to the year
+                1985. Right. Maybe you were adopted.
             </p>
         </main>
         <script type="module" src="./main.js"></script>
