--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                 <details>
                     <summary>Day 06</summary>
-                    <p>text-wrap: balance</p>
+                    <p>text-wrap: balance and pretty</p>
                     <p>
                         Task: Implement Balanced and Aesthetically Pleasing Text
                         Wrapping.
@@ -235,6 +235,14 @@
                         <li>
                             Use the text-wrap: balance property on the
                             paragraphs to enable balanced text wrapping.
+                        </li>
+                        <li>
+                            Use the text-wrap: pretty property on the headings
+                            to enable aesthetically pleasing text wrapping.
+                        </li>
+                        <li>
+                            Highlight the difference between between traditional
+                            text wrapping and the new properties.
                         </li>
                     </ol>
 
