--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <li>Apply the animation using animation-timeline.</li>
                     </ol>
 
-                    <a href="/day-01/" target="_blank">Go to the task page</a>
+                    <a href="/day-01/">Go to the task page</a>
 
                     <p>
                         DX Improvement: Removes the need for complex JavaScript
@@ -242,7 +242,8 @@
                         </li>
                         <li>
                             Highlight the difference between between traditional
-                            text wrapping and the new properties.
+                            text wrapping and the new properties. And notice
+                            performance affects of text-wrap: pretty.
                         </li>
                     </ol>
 
@@ -257,6 +258,7 @@
 
                 <details>
                     <summary>Day 07</summary>
+                    <p>light-dark() function</p>
                     <p>Task: Implement a Light-Dark Theme.</p>
                     <a
                         href="https://developer.mozilla.org/en-US/docs/Web/CSS/color_value/light-dark"
@@ -288,136 +290,180 @@
 
                 <details>
                     <summary>Day 08</summary>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <p>Accent-Color Property</p>
+                    <p>Task: Style a Form with Accent Colors.</p>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/accent-color"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
+                            Apply a consistent accent-color to all form controls
+                            (checkboxes, radio buttons, progress bars).
                         </li>
-                        <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
-                        </li>
-                        <li>Apply the animation using animation-timeline.</li>
                     </ol>
 
                     <a href="/day-08/" target="_blank">Go to the task page</a>
 
                     <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
+                        DX Improvement: Provides a simple, declarative way to
+                        style form controls consistently without custom styling
+                        for each.
                     </p>
                 </details>
 
                 <details>
                     <summary>Day 09</summary>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <p>Object.groupBy</p>
+                    <p>Task: Group Transactions by Category.</p>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/groupBy"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
+                            Take an array of transaction objects with properties
+                            like category and amount.
                         </li>
                         <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
+                            Use Object.groupBy to organize transactions by
+                            category.
                         </li>
-                        <li>Apply the animation using animation-timeline.</li>
                     </ol>
 
                     <a href="/day-09/" target="_blank">Go to the task page</a>
 
                     <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
+                        DX Improvement: Reduces boilerplate for grouping arrays,
+                        making it more intuitive and easier to read.
                     </p>
                 </details>
 
                 <details>
                     <summary>Day 10</summary>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <p>New Array Methods: toSorted, toReversed, toSpliced</p>
+                    <p>Task: Manipulate Arrays Without Mutation.</p>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/toSorted"
+                        target="_blank"
+                        >Documentation 1</a
+                    >
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/toReversed"
+                        target="_blank"
+                        >Documentation 2</a
+                    >
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/toSpliced"
+                        target="_blank"
+                        >Documentation 3</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
+                            Use sort, reverse and splice methods to manipulate
+                            data and see that it mutates the original data.
                         </li>
                         <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
+                            Use the new toSorted, toReversed, toSpliced methods
+                            to create a new array with the desired changes
+                            without mutating the original data.
                         </li>
-                        <li>Apply the animation using animation-timeline.</li>
                     </ol>
 
                     <a href="/day-10/" target="_blank">Go to the task page</a>
 
                     <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
+                        DX Improvement: Provides a more intuitive and safer way
+                        to manipulate arrays without mutating the original data.
                     </p>
                 </details>
 
                 <details>
                     <summary>Day 11</summary>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <p>New Array Methods: with</p>
+                    <p>Task: Update Array Element Without Mutation.</p>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/with"
+                        target="_blank"
+                        >Documentation</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
+                            Create a copy of the array manually ([...colors]).
+                            Replace one element by directly modifying the copy.
                         </li>
                         <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
+                            Use the with method to create a new array with the
+                            specified element replaced, leaving the original
+                            array untouched.
                         </li>
-                        <li>Apply the animation using animation-timeline.</li>
+                        <li>
+                            Compare the with method with the traditional
+                            approach to achieve the same result.
+                        </li>
                     </ol>
 
                     <a href="/day-11/" target="_blank">Go to the task page</a>
 
                     <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
+                        DX Improvement: Avoids manual copying, reducing the risk
+                        of accidental mutations.
                     </p>
                 </details>
 
                 <details>
                     <summary>Day 12</summary>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
-                    <a href="" target="_blank">Documentation</a>
+                    <p>View Transition</p>
+                    <p>Task: Add View Transitions When Switching Tabs.</p>
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/API/View_Transitions_API"
+                        target="_blank"
+                        >Documentation 1</a
+                    >
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Web/API/View_Transitions_API/Using"
+                        target="_blank"
+                        >Documentation 2</a
+                    >
                     <p>Steps:</p>
                     <ol>
                         <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
+                            Update the `updateView` function to use
+                            startViewTransition() from the View Transitions API.
                         </li>
                         <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
+                            Define smooth sliding animations for entering and
+                            exiting content during transitions with @keyframes.
                         </li>
-                        <li>Apply the animation using animation-timeline.</li>
+                        <li>
+                            Use the `::view-transition-group`,
+                            `::view-transition-old`, and `::view-transition-new`
+                            pseudo-elements to apply the animations during
+                            transitions.
+                        </li>
+                        <li>
+                            Link the CSS transitions to the `#content` element
+                            by specifying a `view-transition-name`.
+                        </li>
                     </ol>
 
                     <a href="/day-12/" target="_blank">Go to the task page</a>
 
                     <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
+                        DX Improvement: Simplifies the creation of smooth
+                        animations.
                     </p>
                 </details>
 
                 <details>
                     <summary>Day 13</summary>
+                    <p></p>
                     <p>Task: Animate a Header’s Size While Scrolling.</p>
                     <a href="" target="_blank">Documentation</a>
                     <p>Steps:</p>
@@ -444,6 +490,7 @@
 
                 <details>
                     <summary>Day 14</summary>
+                    <p></p>
                     <p>Task: Animate a Header’s Size While Scrolling.</p>
                     <a href="" target="_blank">Documentation</a>
                     <p>Steps:</p>
