--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <li>Apply the animation using animation-timeline.</li>
                     </ol>
 
-                    <a href="/day-01/">Go to the task page</a>
+                    <a href="/day-01/" target="_blank">Go to the task page</a>
 
                     <p>
                         DX Improvement: Removes the need for complex JavaScript
