prepared last days

--- a/index.html
+++ b/index.html
@@ -463,56 +463,32 @@
 
                 <details>
                     <summary>Day 13</summary>
-                    <p></p>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
+                    <p>View Transition 2</p>
+                    <p>Task: Animate page transition</p>
                     <a href="" target="_blank">Documentation</a>
                     <p>Steps:</p>
                     <ol>
-                        <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
-                        </li>
-                        <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
-                        </li>
-                        <li>Apply the animation using animation-timeline.</li>
+                        <li></li>
                     </ol>
 
-                    <a href="/day-13/" target="_blank">Go to the task page</a>
+                    <a href="/day-13/">Go to the task page</a>
 
-                    <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
-                    </p>
+                    <p>DX Improvement:</p>
                 </details>
 
                 <details>
                     <summary>Day 14</summary>
                     <p></p>
-                    <p>Task: Animate a Header’s Size While Scrolling.</p>
+                    <p>Task:</p>
                     <a href="" target="_blank">Documentation</a>
                     <p>Steps:</p>
                     <ol>
-                        <li>
-                            Use @scroll-timeline to link scrolling progress to a
-                            CSS animation.
-                        </li>
-                        <li>
-                            Create a keyframe animation for the header’s height
-                            and font size.
-                        </li>
-                        <li>Apply the animation using animation-timeline.</li>
+                        <li></li>
                     </ol>
 
                     <a href="/day-14/" target="_blank">Go to the task page</a>
 
-                    <p>
-                        DX Improvement: Removes the need for complex JavaScript
-                        scroll listeners, making animations smoother and more
-                        declarative.
-                    </p>
+                    <p>DX Improvement:</p>
                 </details>
             </section>
         </main>
