--- a/day-13/index.html
+++ b/day-13/index.html
@@ -3,12 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Day 13:</title>
+        <title>Day 13: View Transition 2</title>
         <link rel="stylesheet" href="../main.css" />
     </head>
     <body>
-        <header class="header"></header>
-        <main class="container"></main>
+        <header class="header">View Transition 2</header>
+        <main class="container">
+            <a href="/">Home</a>
+            <h1>Page</h1>
+        </main>
         <script type="module" src="./main.js"></script>
     </body>
 </html>
