--- a/day-03/index.html
+++ b/day-03/index.html
@@ -27,7 +27,7 @@
                         minlength="6"
                     />
                 </label>
-                <button type="submit" disabled>Submit</button>
+                <button type="submit">Submit</button>
             </form>
         </main>
         <script type="module" src="./main.js"></script>
