--- a/day-05/index.html
+++ b/day-05/index.html
@@ -9,8 +9,8 @@
     <body>
         <header class="header">Popover API with Anchor Positioning</header>
         <main class="container">
-            <button class="button">Click me</button>
-            <div class="popover">
+            <button popovertarget="mypopover" class="button">Click me</button>
+            <div class="popover" id="mypopover" popover>
                 <p>This is a custom popover</p>
             </div>
         </main>
